# myrobot

./: .gitignore  README.md  REPO_ORGANIZATION.md  TODO.md  rpi5-wifi-setup.md
src/myrobot_actions/: CMakeLists.txt  package.xml
src/myrobot_actions/action/: NavigateToPose.action
src/myrobot_bringup/: CMakeLists.txt  package.xml
src/myrobot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/myrobot_bringup/rviz/: simple_nav.rviz
src/myrobot_controller/: CMakeLists.txt  package.xml
src/myrobot_controller/config/: myrobot_controllers.yaml
src/myrobot_controller/launch/: controller.launch.py
src/myrobot_controller/myrobot_controller/: navigation.py  twist_relay.py
src/myrobot_description/: CMakeLists.txt  package.xml
src/myrobot_description/launch/: display.launch.py  gazebo.launch.py
src/myrobot_description/myrobot_description/: waypoint_marker_publisher.py
src/myrobot_description/urdf/robot/: common_properties.xacro  my_robot.urdf.xacro  my_robot_homemade.xacro  myrobot_gazebo.xacro  robot_ros2_control.xacro
src/myrobot_description/worlds/: nav_test.world
src/myrobot_firmware/: CMakeLists.txt  myrobot_interface.xml  package.xml
src/myrobot_firmware/config/: ekf.yaml
src/myrobot_firmware/firmware/feedforward/: feedforward.ino  l-ff.txt  r-ff.txt
src/myrobot_firmware/firmware/robot_control/: robot_control.ino
src/myrobot_firmware/include/myrobot_firmware/: myrobot_interface.hpp
src/myrobot_firmware/launch/: hardware_interface.launch.py
src/myrobot_firmware/myrobot_firmware/: mpu6050_driver.py
src/myrobot_firmware/src/: myrobot_interface.cpp
src/myrobot_navigation/: CMakeLists.txt  package.xml
src/myrobot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller.yaml  controller_server_blind.yaml  planner_server_blind.yaml  waypoints.yaml
src/myrobot_navigation/launch/: go_to_goal.launch.py  navigation.launch.py
src/myrobot_navigation/maps/: blank_map.pgm  blank_map.yaml
src/myrobot_navigation/myrobot_navigation/: GO_TO_GOAL_SERVER.md  go_to_goal_client.py  go_to_goal_server.py  go_to_pose_action.py  go_to_pose_client.py  odom_logger.py
